--- a/app.css
+++ b/app.css
@@ -11,6 +11,7 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
+  background-color: rgb(245, 243, 243);
 }
 
 #container {
@@ -23,8 +24,22 @@ body {
   margin: 2rem;
 }
 
+#search1 {
+  margin: 1rem;
+}
+
+.select {
+  margin: 0.2rem;
+}
+
 img {
   max-width: 12vw;
+}
+
+.caja {
+  border: 1px solid;
+  border-radius: 0.2rem;
+  padding: 1rem;
 }
 
 .div2 h1 {
