--- a/app.css
+++ b/app.css
@@ -1,7 +1,17 @@
-#containerCheck {
-  border: 1px solid black;
+.divCart {
+  border: 1px solid rgba(0, 0, 0, 0.397);
   font-size: 1.3rem;
   padding: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.btnX {
+  height: 20px;
+  border-radius: 20rem;
+  font-weight: 700;
 }
 
 .flexx {
