--- a/app.css
+++ b/app.css
@@ -1,76 +1,142 @@
-.divCart {
-  border: 1px solid rgba(0, 0, 0, 0.397);
-  font-size: 1.3rem;
-  padding: 1rem;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+img {
+  max-width: 13vw;
 }
 
-.btnX {
-  height: 20px;
-  border-radius: 20rem;
-  font-weight: 700;
-}
-
-.flexx {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-
-}
-
-.inputS {
-  width: 20px;
-}
-
-button {
-  margin: 1rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#header {
   width: 100%;
-  text-align: center;
+  background-color: rgb(126, 220, 252);
+  position: relative;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  background-color: rgb(245, 243, 243);
-}
-
-#container {
-  width: 80vw;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  margin: 2rem;
-}
-
-#search1 {
-  margin: 1rem;
-}
-
-.select {
-  margin: 0.2rem;
-}
-
-img {
-  max-width: 12vw;
-}
-
-.caja {
-  border: 1px solid;
-  border-radius: 0.2rem;
   padding: 1rem;
 }
-
-.div2 h1 {
-  font-size: 1rem;
+#header nav {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+#header nav #search1 {
+  height: 30%;
+  border: whitesmoke;
+  padding: 0.2rem;
+  border-radius: 0.2rem;
+}
+#header nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#header nav ul i {
+  margin: 0 1rem;
+  font-size: 1.1rem;
+  color: white;
+  cursor: pointer;
+}
+#header nav ul li {
+  list-style: none;
   margin: 0.5rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: rgb(255, 255, 255);
+}
+
+.viewcart {
+  display: none;
+}
+
+.active2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  right: 2.5rem;
+  top: 3.2rem;
+  border-radius: 0.5rem 0 0.5rem 0.5rem;
+  padding: 1rem;
+  border: 1px solid rgba(141, 141, 141, 0.281);
+}
+.active2::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background-color: rgb(255, 255, 255);
+  right: -1;
+  border-radius: 1rem;
+  top: -2;
+  position: absolute;
+}
+.active2 #containerTotal {
+  text-align: center;
+  padding: 1rem;
+}
+.active2 .deleteAll {
+  padding: 0.2rem;
+  width: 70%;
+}
+
+.carting {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.carting button {
+  width: 1rem;
+  margin: 0 0 0 1rem;
+  background-color: transparent;
+  border: none;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: rgba(255, 0, 0, 0.432);
+}
+
+.classCart {
+  padding: 0.7rem;
+}
+.classCart h1 {
+  font-size: 1.2rem;
+  color: rgba(0, 0, 0, 0.664);
+}
+
+.btnX, .deleteAll {
+  cursor: pointer;
+}
+
+main {
+  width: 90%;
+  border: 1px solid;
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+main #container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 3rem;
+}
+main .search {
+  display: flex;
+  flex-direction: column;
+}
+main .search select {
+  margin: 0.5rem 0;
 }
 
 /*# sourceMappingURL=app.css.map */
