--- a/sass/app.scss
+++ b/sass/app.scss
@@ -27,6 +27,10 @@ body {
 
     padding: 1rem;
 
+    img {
+        width: 3vw;
+    }
+
     nav {
         display: flex;
         align-items: center;
@@ -155,5 +159,13 @@ main {
             margin: .5rem 0;
         }
     }
+}
+
+.inputS {
+    width: 2rem;
+}
+
+h1 {
+    font-size: 1.3rem;
 }
 
